# dotfiles

./: .gitconfig  .gitignore  .gitmodules  .pylintrc  .zshrc  Brewfile  arch-install.sh  cac.py  cargolist  colors.py  colors.sh  init.vim  install.sh  paclist  piplist  setup.cfg  setup.sh
X11/: xmodmap  xresources
aerc/: accounts.conf
alacritty/: alacritty.yml
anacron/: anacrontab
autorandr/: postswitch
autorandr/dual/: config
autorandr/laptop/: config
cac/: lovelace.json  paraiso-light.json  shapeshifter.json  tokyonight.json  visibone.json
cava/: config
colors/: tokyonight.json
cookiecutter/: config.yml
cookiecutter/py/: cookiecutter.json
cookiecutter/py/{{ cookiecutter.name }}/: .flake8  .gitignore  .readthedocs.yml  LICENSE.md  README.md  noxfile.py  pyproject.toml
cookiecutter/py/{{ cookiecutter.name }}/.github/workflows/: coverage.yml  release.yml  tests.yml
cookiecutter/py/{{ cookiecutter.name }}/docs/: conf.py  development.md  index.md  license.md  reference.md  requirements.txt
cookiecutter/py/{{ cookiecutter.name }}/src/{{cookiecutter.name}}/: __init__.py
cookiecutter/py/{{ cookiecutter.name }}/tests/: __init__.py
cookiecutter/tufte/: cookiecutter.json
cron/: crontab
discord/themes/: cac.theme.css  inherit.theme.css  themes
dunst/: dunstrc  gendunstrc
emacs/: emacs.org  init.el
eww/: eww.scss  eww.xml
fish/: config.fish  fish_plugins  fish_variables  fishfile
fish/functions/: fish_title.fish  mkdir-cd.fish  nvim_cwd.fish  send-notification.fish  upto_git.fish
fontconfig/: fonts.conf
foot/: foot.ini
fusuma/: config.yml
gammastep/: config.ini
git/: .gitignore  config  gitconfig  gitignore  ignore
hypr/: hyprland.conf
i3/: config
kanshi/: config
keyd/: default.conf
keynav/: keynavrc
kitty/: kitty.conf  mykitten.py  scrollback.vim  select_tab.py
kmonad/: config.kbd
lib/: current-song.js  send-notification.js
lightdm/: lightdm-webkit2-greeter.conf  lightdm.conf
mbsync/: mbsyncrc
mpv/: input.conf
mpv/scripts/: slicing.lua
neomutt/: colors  neomuttrc
neomutt/accounts/: school
newsboat/: urls
nvim/: .config  .luarc.json  Pipfile  config.lua  init.lua  init.vim  lazy-lock.json  nvim.norg  nvim.toml
nvim/colors/: cac.vim  inherit.vim  theme.lua
nvim/ftdetect/: forester.lua
nvim/ftplugin/: agda.lua  deck.lua  forester.lua  markdown.lua  markdown.vim  norg.lua  python.vim  rust.lua  rust.vim  tex.lua  tex.vim
nvim/lua/: appearance.lua  buffers.lua  completion.lua  forester.lua  git.lua  lsp.lua  make.lua  misc.lua  neovide.lua  notes.lua  picker.lua  plugins.lua  snippets.lua  statusline.lua  telescope.lua  terminal.lua  treesitter.lua  ui.lua
nvim/luasnippets/: all.lua  forester.lua  luasnip.toml  markdown.lua  python.lua  (+3 more)
old/: hyprland
pandoc/: header-include.tex  sample_tex.tex
picom/: picom.conf
polybar/: config
proselint/: config.json
python/: .pylintrc  setup.cfg
qmk/: corne.json  crkbd_rev1_keys.hex  crkbd_rev1_via.hex  keys.json
qtile/: config.py  pyproject.toml
qtile/core/: __init__.py  bar.py  groups.py  hooks.py  input.py  keys.py  layouts.py  mouse.py  screens.py  settings.py
qtile/widgets/: __init__.py  battery.py
qutebrowser/: autoconfig.yml  config.py  quickmarks
redshift/: redshift.conf
rofi/: cac.rasi  calc.rasi  center.rasi  config.rasi  launcher.rasi  main.rasi  top.rasi
sc-im/: scimrc
skhd/: skhdrc
slack/: colorscheme
ssh/: config
sway/: config  keymap.xkb  server-0.xkb
systemd/: gpg-agent.service  powertop.service
tarsnap/: tarsnap-backup.sh  tarsnap.conf
task/: taskopenrc  taskrc
taskwarrior/: taskrc
telegram/: cac.tdesktop-theme
tmux/: .tmux.conf  default.tmux  tmux-256color.terminfo  tmux.conf
tridactyl/: tridactylrc
vim/: Pipfile  init.vim
waybar/: config  style.css
xdg/: mimeapps.list
xmonad/: xmonad.hs
xournalpp/: settings.xml
zathura/: genzathurarc  zathurarc
zsh/: .zshrc  zshrc
(+75 files in other folders)
